--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,14 @@ font-size: 48px;
     animation-iteration-count: 1;
 }
 
+.loser {
+    animation-name: wiggle;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+}
+
 span {
     font-size: 30px;
 }
