--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 
-
 div .col {
-display: flex;
-justify-content: center;
-align-items: center;
-font-size: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*max-width: 200px;*/
+    font-size: 48px;
 }
 
 .dark:before {
